tests/NormalTests/paczka1/fuzzy1/17261153.err
Error in line 6: FjQLa0zvH A239 68,0
Error in line 13: zoQtWbeb A239 88,4
Error in line 24: zoQtWbeb A141 32,1
Error in line 26: kd0nmj S42 25,9
Error in line 28: lscp501PH A723 55,1
Error in line 29: kd0nmj A239 86,4
